--- a/views/linkit.jade
+++ b/views/linkit.jade
@@ -1,3 +1,22 @@
 extends layout
 block content
-    h1 Welcome to #{title}
+    div.userbox
+        if user
+            div.welcomebox
+                p.
+                    Welcome, #{user.name}
+        else
+            div.loginbox
+                form(name="login", action="/login", method="post")
+                    input(type="text", name="user")
+                    input(type="password", name="pass")
+                    input(type="submit", value="login")
+    div.addnewbox
+        form(name="newlink", action="/links", method="post")
+            label New Link
+            input(type="text", name="linkurl")
+            input(type="submit", value="Post New Link")
+    div.links
+        ul
+            each val in data.links
+                li: a(href=val.url, target='_blank')= val.title
