--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,55 @@
 doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+html(lang='en')
+    head
+        title LinkIt - The Link Aggregator
+        meta(charset='utf-8')
+        meta(http-equiv='X-UA-Compatible', content='IE=edge')
+        meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
+        link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css', rel='stylesheet')
+        link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css', rel='stylesheet')
+        link(href='stylesheets/style.css', rel='stylesheet')
+    body
+        .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+            .container
+                .navbar-header
+                    button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+                        span.sr-only Toggle navigation
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                    a.navbar-brand(href='#') Linkit
+                .navbar-collapse.collapse
+                    if user
+                        p.navbar-text.pull-right.
+                            Welcome, #{user.fullname}
+                    else
+                        form.navbar-form.navbar-right(role='form')
+                            .form-group
+                                input.form-control(type='text', placeholder='Username')
+                            = " "
+                            .form-group
+                                input.form-control(type='password', placeholder='Password')
+                            = " "
+                            button.btn.btn-success(type='submit') Sign in
+                // /.navbar-collapse
+        // Main jumbotron for a primary marketing message or call to action
+        .jumbotron
+            .container
+                h1 Hello, world!
+                p
+                    | This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.
+                p
+                    a.btn.btn-primary.btn-lg(role='button') Learn more &raquo;
+        .container
+            block content
+            hr
+            footer
+                p &copy; Janic Mikes & Yanick Gubler 2015
+        // /container
+
+
+        // Bootstrap core JavaScript
+        // ==================================================
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+        script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
+        //script(src='#{pathToAssets}/dist/js/bootstrap.min.js')
