--- a/views/linkit.jade
+++ b/views/linkit.jade
@@ -1,3 +1,24 @@
 extends layout
 block content
-    h1 Welcome to #{title}
+    ul.media-list
+        for link in data.links
+            li.media
+                .media-left
+                    button(type='button').btn.btn-default.btn-sm
+                        span.glyphicon.glyphicon-chevron-up
+                    .votes=link.rating
+                    button(type='button').btn.btn-default.btn-sm
+                        span.glyphicon.glyphicon-chevron-down
+                .media-body
+                    if user.username === link.sender.username
+                        button.btn.btn-danger.btn-sm.pull-right Delete
+                    h4.media-heading= link.title
+                        | &nbsp;
+                        a(href=link.url, target='_blank')= link.url
+                    p=link.description
+                    p Created by&nbsp;
+                        a(href='users/' + link.sender.username)=link.sender.fullname
+                        | &nbsp;
+                        =link.date
+        else
+            p Sorry no links yet
