some improvements - redirect from home

--- a/views/linkit.jade
+++ b/views/linkit.jade
@@ -2,7 +2,7 @@ extends layout
 block content
     ul.media-list
         for link in data.links
-            li.media
+            li.media.well
                 .media-left
                     button(type='button').btn.btn-default.btn-sm
                         span.glyphicon.glyphicon-chevron-up
