added a smarter model for the linkrepository

--- a/views/linkit.jade
+++ b/views/linkit.jade
@@ -1,7 +1,7 @@
 extends layout
 block content
     ul.media-list
-        for link in data.links
+        for link in data
             li.media.well
                 .media-left
                     button(type='button').btn.btn-default.btn-sm
