--- a/views/linkit.jade
+++ b/views/linkit.jade
@@ -21,4 +21,4 @@ block content
                         | &nbsp;
                         =link.date
         else
-            p Sorry no links yet
+            li Sorry no links yet
