--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html(lang='en')
                         span.icon-bar
                         span.icon-bar
                         span.icon-bar
-                    a.navbar-brand(href='#') Linkit
+                    a.navbar-brand(href='') Linkit
                 .navbar-collapse.collapse
                     if user
                         p.navbar-text.pull-right.
@@ -33,13 +33,16 @@ html(lang='en')
                             button.btn.btn-success(type='submit') Sign in
                 // /.navbar-collapse
         // Main jumbotron for a primary marketing message or call to action
+        #messages
         .jumbotron
             .container
-                h1 Hello, world!
-                p
-                    | This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.
-                p
-                    a.btn.btn-primary.btn-lg(role='button') Learn more &raquo;
+                h1 Welcome to LinkIt
+                form(role='form')
+                    div.form-group
+                        label(for='newlinkurl') New Link
+                        input(type='text', placeholder='Link Title', name='title').form-control#newlinktitle
+                        input(type='text', placeholder='Link URL', name='url').form-control#newlinkurl
+                    button(type='button', data-loading-text='Saving...').btn.btn-primary.btn-lg#newlinksubmit Post New Link
         .container
             block content
             hr
@@ -52,4 +55,4 @@ html(lang='en')
         // ==================================================
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
         script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
-        //script(src='#{pathToAssets}/dist/js/bootstrap.min.js')
+        script(src='javascripts/linkit.js')
