--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html(lang='en')
         link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css', rel='stylesheet')
         link(href='stylesheets/style.css', rel='stylesheet')
     body
+        #messages
         .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
             .container
                 .navbar-header
@@ -19,7 +20,9 @@ html(lang='en')
                         span.icon-bar
                     a.navbar-brand(href='') Linkit
                 .navbar-collapse.collapse
+                    a.navbar-btn.btn.btn-sm.btn-danger(href='/') Reset
                     if user
+                        button.navbar-btn.pull-right.btn.btn-sm.btn-danger(type='button')#signout Sign out
                         p.navbar-text.pull-right.
                             Welcome, #{user.fullname}
                     else
@@ -33,7 +36,6 @@ html(lang='en')
                             button.btn.btn-success(type='submit') Sign in
                 // /.navbar-collapse
         // Main jumbotron for a primary marketing message or call to action
-        #messages
         .jumbotron
             .container
                 h1 Welcome to LinkIt
@@ -53,6 +55,6 @@ html(lang='en')
 
         // Bootstrap core JavaScript
         // ==================================================
-        script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-        script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
+        script(src='javascripts/jquery.min.js')
+        script(src='javascripts/bootstrap.min.js')
         script(src='javascripts/linkit.js')
