--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,86 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+doctype html
+html(lang='en')
+    head
+        title LinkIt - The Link Aggregator
+        meta(charset='utf-8')
+        meta(http-equiv='X-UA-Compatible', content='IE=edge')
+        meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
+        link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css', rel='stylesheet')
+        link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css', rel='stylesheet')
+        link(href='stylesheets/style.css', rel='stylesheet')
+    body
+        #messages
+        .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+            .container
+                .navbar-header
+                    button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+                        span.sr-only Toggle navigation
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                    a.navbar-brand(href='') Linkit
+                .navbar-collapse.collapse
+                    a.navbar-btn.btn.btn-sm.btn-danger(href='/') Reset
+                    if user
+                        button.navbar-btn.pull-right.btn.btn-sm.btn-danger(type='button')#signout Sign out
+                        p.navbar-text.pull-right.
+                            Welcome, #{user.fullname}
+                    else
+                        form.navbar-form.navbar-right(role='form', name='login')
+                            .form-group
+                                input.form-control(type='text', placeholder='Username')
+                            = " "
+                            .form-group
+                                input.form-control(type='password', placeholder='Password')
+                            = " "
+                            button.btn.btn-success(type='submit') Sign in
+                // /.navbar-collapse
+        // Main jumbotron for a primary marketing message or call to action
+        .jumbotron
+            .container
+                h1 Welcome to LinkIt
+                h2 Add your Link
+                form(role='form', name='addlink', autocomplete='off')
+                    .form-group
+                        label(for='title') URL
+                        input(type='text', placeholder='http://www.domain.com', name='url').form-control#newlinkurl
+                    .form-group
+                        label(for='title') Title
+                        input(type='text', placeholder='My Cool Page', name='title').form-control#newlinktitle
+                    .form-group
+                        label(for='title') Description
+                        input(type='text', placeholder='Description', name='description').form-control#newlinkdescription
+                    button(type='button').btn.btn-primary.btn-lg#newlinksubmit Post New Link
+        .container
+            ul.media-list#linklist
+                for link in links
+                    li.media(id='link-#{link.id}')
+                    .media-left
+                        button(type='button', data-id='#{link.id}').btn.btn-default.btn-sm.upvotelink
+                            span.glyphicon.glyphicon-chevron-up
+                        .votes(id='linkvotes-#{link.id}')=link.rating
+                        button(type='button', data-id='#{link.id}').btn.btn-default.btn-sm.downvotelink
+                            span.glyphicon.glyphicon-chevron-down
+                    .media-body
+                        if user && user.username == link.sender.username
+                            button.btn.btn-danger.btn-sm.pull-right.deletelink(data-id='#{link.id}') Delete
+                        h4.media-heading= link.title
+                        | &nbsp;
+                        a(href=link.url, target='_blank')= link.url
+                        p=link.description
+                        p Created by&nbsp;
+                            a(href='users/' + link.sender.username)=link.sender.fullname
+                            | &nbsp;
+                            =link.date
+                else
+                    li Sorry no links yet
+            hr
+            footer
+                p &copy; Janic Mikes & Yanick Gubler 2015
+        // /container
+                                                      // Bootstrap core JavaScript
+        // ==================================================
+        script(src='javascripts/jquery.min.js')
+        script(src='javascripts/bootstrap.min.js')
+        script(src='javascripts/linkit.js')
+                       
