added travis continuous integration support with grunt test task to jshint

--- a/views/index.jade
+++ b/views/index.jade
@@ -79,7 +79,7 @@ html(lang='en')
         // /container
         // Bootstrap core JavaScript
         // ==================================================
-        script(src='javascripts/jquery.min.js')
-        script(src='javascripts/bootstrap.min.js')
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+        script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
         script(src='javascripts/linkit.js')
                        
