--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ html(lang='en')
         link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css', rel='stylesheet')
         link(href='stylesheets/style.css', rel='stylesheet')
     body
-        #messages
+        #messages.visible-lg.visible-md
         .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
             .container
                 .navbar-header
@@ -20,7 +20,7 @@ html(lang='en')
                         span.icon-bar
                     a.navbar-brand(href='') Linkit
                 .navbar-collapse.collapse
-                    a.navbar-btn.btn.btn-sm.btn-danger(href='/') Reset
+                    a.navbar-btn.btn.btn-sm.btn-default(href='/') Reset
                     if user
                         a.navbar-btn.pull-right.btn.btn-sm.btn-danger(href='/users/logout')#signout Sign out
                         p.navbar-text.pull-right.
@@ -28,7 +28,8 @@ html(lang='en')
                     else
                         form.navbar-form.navbar-right(role='form', method='post', name='login', action='/users/login')
                             .form-group
-                                input.form-control(type='text', name='username', placeholder='Username', required)
+                                label.sr-only(for='username') Username
+                                input#username.form-control(type='text', name='username', placeholder='Username', required)
                             = " "
                             //-.form-group
                             //-    input.form-control(type='password', placeholder='Password')
@@ -41,31 +42,33 @@ html(lang='en')
                 h2 Add your Link
                 form(role='form', name='addlink', autocomplete='off')
                     .form-group
-                        label(for='title') URL
-                        input(type='url', placeholder='http://www.domain.com', name='url', required ).form-control#newlinkurl
+                        label(for='url') URL
+                        input(type='url', placeholder='http://www.domain.com', name='url', required).form-control#url
                     .form-group
                         label(for='title') Title
-                        input(type='text', placeholder='My Cool Page', name='title', required).form-control#newlinktitle
+                        input(type='text', placeholder='My Cool Page', name='title', required).form-control#title
                     .form-group
-                        label(for='title') Description
-                        input(type='text', placeholder='Description', name='description').form-control#newlinkdescription
+                        label(for='description') Description
+                        input(type='text', placeholder='Description', name='description').form-control#description
                     button(type='button').btn.btn-primary.btn-lg#newlinksubmit Post New Link
         .container
             ul.media-list#linklist
                 for link in links
-                    li.media(id='link-#{link.id}')
+                    li.media(id='link-#{link.id}', data-id='#{link.id}')
                     .media-left
-                        button(type='button', data-id='#{link.id}').btn.btn-default.btn-sm.upvotelink
+                        label.sr-only(for='upvote-#{link.id}') Upvote #{link.title}
+                        button(type='button', data-id='#{link.id}', id='upvote-#{link.id}').btn.btn-default.btn-sm.upvotelink
                             span.glyphicon.glyphicon-chevron-up
-                        .votes(id='linkvotes-#{link.id}')=link.rating
-                        button(type='button', data-id='#{link.id}').btn.btn-default.btn-sm.downvotelink
+                        .votes(id='linkvotes-#{link.id}')=link.rating.value
+                        label.sr-only(for='downvote-#{link.id}') Downvote #{link.title}
+                        button(type='button', data-id='#{link.id}', id='downvote-#{link.id}').btn.btn-default.btn-sm.downvotelink
                             span.glyphicon.glyphicon-chevron-down
                     .media-body
                         if user && user == link.sender.username
-                            button.btn.btn-danger.btn-sm.pull-right.deletelink(data-id='#{link.id}') Delete
-                        h4.media-heading= link.title
-                        | &nbsp;
-                        a(href=link.url, target='_blank')= link.url
+                            label.sr-only(for='delete-#{link.id}') Delete link #{link.title}
+                            button.btn.btn-danger.btn-sm.pull-right.deletelink(data-id='#{link.id}', id='downvote-#{link.id}') Delete
+                        h4.media-heading
+                            a(href=link.url, target='_blank')= link.title
                         p=link.description
                         p Created by&nbsp;
                             a(href='users/' + link.sender.username)=link.sender.fullname
