--- a/views/links.jade
+++ b/views/links.jade
@@ -1,17 +1,19 @@
 for link in links
-    li.media(id='link-#{link.id}')
+    li.media(id='link-#{link.id}', data-id='#{link.id}')
         .media-left
-            button(type='button', data-id='#{link.id}').btn.btn-default.btn-sm.upvotelink
+            label.sr-only(for='upvote-#{link.id}') Upvote #{link.title}
+            button(type='button', data-id='#{link.id}', id='upvote-#{link.id}').btn.btn-default.btn-sm.upvotelink
                 span.glyphicon.glyphicon-chevron-up
-            .votes(id='linkvotes-#{link.id}')=link.rating
-            button(type='button', data-id='#{link.id}').btn.btn-default.btn-sm.downvotelink
+            .votes(id='linkvotes-#{link.id}')=link.rating.value
+            label.sr-only(for='downvote-#{link.id}') Downvote #{link.title}
+            button(type='button', data-id='#{link.id}', id='downvote-#{link.id}').btn.btn-default.btn-sm.downvotelink
                 span.glyphicon.glyphicon-chevron-down
         .media-body
-            if user && user.username == link.sender.username
-                button.btn.btn-danger.btn-sm.pull-right.deletelink(data-id='#{link.id}') Delete
-            h4.media-heading= link.title
-                | &nbsp;
-                a(href=link.url, target='_blank')= link.url
+            if user && user == link.sender.username
+                label.sr-only(for='delete-#{link.id}') Delete link #{link.title}
+                button.btn.btn-danger.btn-sm.pull-right.deletelink(data-id='#{link.id}', id='downvote-#{link.id}') Delete
+            h4.media-heading
+                a(href=link.url, target='_blank')= link.title
             p=link.description
             p Created by&nbsp;
                 a(href='users/' + link.sender.username)=link.sender.fullname
