added voting checks so a user can only vote once. corrected a bug in the link model

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ html(lang='en')
                         span.icon-bar
                     a.navbar-brand(href='') Linkit
                 .navbar-collapse.collapse
-                    a.navbar-btn.btn.btn-sm.btn-default(href='/') Reset
+                    a.navbar-btn.btn.btn-xs.btn-danger(href='/') Reset
                     if user
                         a.navbar-btn.pull-right.btn.btn-sm.btn-danger(href='/users/logout')#signout Sign out
                         p.navbar-text.pull-right.
@@ -57,12 +57,20 @@ html(lang='en')
                     li.media(id='link-#{link.id}', data-id='#{link.id}')
                     .media-left
                         label.sr-only(for='upvote-#{link.id}') Upvote #{link.title}
-                        button(type='button', data-id='#{link.id}', id='upvote-#{link.id}').btn.btn-default.btn-sm.upvotelink
-                            span.glyphicon.glyphicon-chevron-up
+                        if user && !link.rating._voted(user)
+                            button(type='button', data-id='#{link.id}', id='upvote-#{link.id}').btn.btn-default.btn-sm.upvotelink
+                                span.glyphicon.glyphicon-chevron-up
+                        else
+                            button(type='button', data-id='#{link.id}', id='upvote-#{link.id}').btn.btn-default.btn-sm.upvotelink.disabled
+                                span.glyphicon.glyphicon-chevron-up
                         .votes(id='linkvotes-#{link.id}')=link.rating.value
                         label.sr-only(for='downvote-#{link.id}') Downvote #{link.title}
-                        button(type='button', data-id='#{link.id}', id='downvote-#{link.id}').btn.btn-default.btn-sm.downvotelink
-                            span.glyphicon.glyphicon-chevron-down
+                        if user && !link.rating._voted(user)
+                            button(type='button', data-id='#{link.id}', id='downvote-#{link.id}').btn.btn-default.btn-sm.downvotelink
+                                span.glyphicon.glyphicon-chevron-down
+                        else
+                            button(type='button', data-id='#{link.id}', id='downvote-#{link.id}').btn.btn-default.btn-sm.downvotelink.disabled
+                                span.glyphicon.glyphicon-chevron-down
                     .media-body
                         if user && user == link.sender.username
                             label.sr-only(for='delete-#{link.id}') Delete link #{link.title}
@@ -73,7 +81,7 @@ html(lang='en')
                         p Created by&nbsp;
                             a(href='users/' + link.sender.username)=link.sender.fullname
                             | &nbsp;
-                            =link.date
+                            =link.submitTimeDisplay
                 else
                     li Sorry no links yet
             hr
