--- a/views/index.jade
+++ b/views/index.jade
@@ -1,102 +1,20 @@
-doctype html
-html(lang='en')
-    head
-        title LinkIt - The Link Aggregator
-        meta(charset='utf-8')
-        meta(http-equiv='X-UA-Compatible', content='IE=edge')
-        meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
-        link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css', rel='stylesheet')
-        link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css', rel='stylesheet')
-        link(href='stylesheets/style.css', rel='stylesheet')
-    body
-        #messages.visible-lg.visible-md
-        .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
-            .container
-                .navbar-header
-                    button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-                        span.sr-only Toggle navigation
-                        span.icon-bar
-                        span.icon-bar
-                        span.icon-bar
-                    a.navbar-brand(href='') Linkit
-                .navbar-collapse.collapse
-                    a.navbar-btn.btn.btn-xs.btn-danger(href='/') Reset
-                    if user
-                        a.navbar-btn.pull-right.btn.btn-sm.btn-danger(href='/users/logout')#signout Sign out
-                        p.navbar-text.pull-right.
-                            Welcome, #{user.fullname}
-                    else
-                        form.navbar-form.navbar-right(role='form', method='post', name='login', action='/users/login')
-                            .form-group
-                                label.sr-only(for='username') Username
-                                input#username.form-control(type='text', name='username', placeholder='Username', required)
-                            = " "
-                            //-.form-group
-                            //-    input.form-control(type='password', placeholder='Password')
-                            //-= " "
-                            button.btn.btn-success(type='submit') Sign in
-        // Main jumbotron for a primary marketing message or call to action
-        .jumbotron
-            .container
-                h1 Welcome to LinkIt
-                h2 Add your Link
-                form(role='form', name='addlink', autocomplete='off')
-                    .form-group
-                        label(for='url') URL
-                        input(type='url', placeholder='http://www.domain.com', name='url', required).form-control#url
-                    .form-group
-                        label(for='title') Title
-                        input(type='text', placeholder='My Cool Page', name='title', required).form-control#title
-                    .form-group
-                        label(for='description') Description
-                        input(type='text', placeholder='Description', name='description').form-control#description
-                    button(type='button').btn.btn-primary.btn-lg#newlinksubmit Post New Link
+extends layout
+block content
+    // Main jumbotron for a primary marketing message or call to action
+    .jumbotron
         .container
-            ul.media-list#linklist
-                for link in links
-                    li.media(id='link-#{link.id}', data-id='#{link.id}')
-                    .media-left
-                        label.sr-only(for='upvote-#{link.id}') Upvote #{link.title}
-                        if user && !link.rating._voted(user)
-                            button(type='button', data-id='#{link.id}', id='upvote-#{link.id}').btn.btn-default.btn-sm.upvotelink
-                                span.glyphicon.glyphicon-chevron-up
-                        else
-                            button(type='button', data-id='#{link.id}', id='upvote-#{link.id}').btn.btn-default.btn-sm.upvotelink.disabled
-                                span.glyphicon.glyphicon-chevron-up
-                        .votes
-                            if link.rating.value > 0
-                                span.badge.btn-success(id='linkvotes-#{link.id}')=link.rating.value
-                            else if link.rating.value < 0
-                                span.badge.btn-danger(id='linkvotes-#{link.id}')=link.rating.value
-                            else
-                                span.badge(id='linkvotes-#{link.id}')=link.rating.value
-                        label.sr-only(for='downvote-#{link.id}') Downvote #{link.title}
-                        if user && !link.rating._voted(user)
-                            button(type='button', data-id='#{link.id}', id='downvote-#{link.id}').btn.btn-default.btn-sm.downvotelink
-                                span.glyphicon.glyphicon-chevron-down
-                        else
-                            button(type='button', data-id='#{link.id}', id='downvote-#{link.id}').btn.btn-default.btn-sm.downvotelink.disabled
-                                span.glyphicon.glyphicon-chevron-down
-                    .media-body
-                        if user && user == link.sender.username
-                            label.sr-only(for='delete-#{link.id}') Delete link #{link.title}
-                            button.btn.btn-danger.btn-sm.pull-right.deletelink(data-id='#{link.id}', id='downvote-#{link.id}') Delete
-                        h4.media-heading
-                            a(href=link.url, target='_blank')= link.title
-                        p=link.description
-                        p Created by&nbsp;
-                            a(href='users/' + link.sender.username)=link.sender.fullname
-                            | &nbsp;
-                            =link.submitTimeDisplay
-                else
-                    li Sorry no links yet
-            hr
-            footer
-                p &copy; Janic Mikes & Yanick Gubler 2015
-        // /container
-        // Bootstrap core JavaScript
-        // ==================================================
-        script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-        script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
-        script(src='javascripts/linkit.js')
-                       
+            h1 Welcome to LinkIt
+            h2 Add your Link
+            form(role='form', name='addlink', autocomplete='off')
+                .form-group
+                    label(for='url') URL
+                    input(type='url', placeholder='http://www.domain.com', name='url', required).form-control#url
+                .form-group
+                    label(for='title') Title
+                    input(type='text', placeholder='My Cool Page', name='title', required).form-control#title
+                .form-group
+                    label(for='description') Description
+                    input(type='text', placeholder='Description', name='description').form-control#description
+                button(type='button').btn.btn-primary.btn-lg#newlinksubmit Post New Link
+    .container
+        ul.media-list#linklist
